--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
-spring.application.name=portfolio
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=password
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.h2.console.enabled=true
+spring.application.name=PortfolioApplication
+server.port=8081
+spring.datasource.url=jdbc:mysql://localhost:3306/market
+spring.datasource.username=root
+spring.datasource.password=root
+spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
-spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
+spring.jpa.show-sql=true
+spring.output.ansi.enabled=ALWAYS
