--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,9 @@
+
 spring.application.name=PortfolioApplication
-spring.datasource.url=jdbc:mysql://localhost:3306/market
+server.port=8081
+spring.datasource.url=jdbc:mysql://localhost:3310/market
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
