--- a/pom.xml
+++ b/pom.xml
@@ -54,6 +54,14 @@
 			<groupId>com.mysql</groupId>
 			<artifactId>mysql-connector-j</artifactId>
 			<scope>runtime</scope> </dependency>
+			
+			 <!-- Mockito -->
+    <dependency>
+        <groupId>org.mockito</groupId>
+        <artifactId>mockito-core</artifactId>
+        <scope>test</scope>
+    </dependency>
+			
 	</dependencies>
 
 	<build>
