--- a/pom.xml
+++ b/pom.xml
@@ -8,10 +8,10 @@
 		<version>3.3.2</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.training</groupId>
-	<artifactId>SpringBootRESTRepo</artifactId>
+	<groupId>com.neueda</groupId>
+	<artifactId>portfolio</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>SpringBootRESTRepo</name>
+	<name>portfolio</name>
 	<description>Demo project for Spring Boot</description>
 	<url/>
 	<licenses>
