--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,8 @@
-
 spring.application.name=PortfolioApplication
 server.port=8080
 spring.datasource.url=jdbc:mysql://localhost:3306/market
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
@@ -11,3 +10,4 @@ spring.output.ansi.enabled=ALWAYS
 logging.level.root=INFO
 logging.level.com.neueda.portfolio.Controller=DEBUG
 
+git a
