--- a/src/main/resources/application-production.properties
+++ b/src/main/resources/application-production.properties
@@ -1,3 +1,3 @@
 spring.datasource.url=jdbc:mysql://db:3306/market
-spring.datasource.username=${DBUSER}
-spring.datasource.password=${DBPASSWORD} 
+spring.datasource.username=root
+spring.datasource.password=
