--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.application.name=PortfolioApplication
-server.port=8081
-spring.datasource.url=jdbc:mysql://localhost:3310/market
+server.port=8080
+spring.datasource.url=jdbc:mysql://localhost:3306/market
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=root
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
