--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=PortfolioApplication
 server.port=8080
 spring.datasource.url=jdbc:mysql://localhost:3306/market
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=dell3501
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
